refactor: 시니어 관점 코드 구조 개선 및 테스트 보강
정확성 버그:
- getUserWithAuthorities: 미존재 유저 200 빈 본문 → NotFoundMemberException
- CustomUserDetailsService: 비활성 유저 raw RuntimeException → DisabledException

보안/설정:
- JWT secret/validity 환경변수 외부화 (기본값 유지)
- CORS: Bearer 토큰 기반이므로 allowCredentials(true)+"*" 안티패턴 제거
- 전역 fallback 예외 핸들러 추가 (미처리 예외 로깅 후 500)

죽은 코드/현대화:
- /test-redirect, 미사용 파라미터, AuthorityRepository 제거
- DTO 5종 record 전환 (Lombok @Setter 가변 빈 제거)
- Java 21: .toList(), instanceof 패턴 매칭, 들여쓰기 일관화

테스트(1 → 10건):
- AuthControllerTest 6건 (인증 플로우/401), UserServiceTest 3건
- Boot 4 대응: spring-boot-starter-webmvc-test 추가, @AutoConfigureMockMvc 신규 패키지

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>