@@ -69,7 +69,7 @@ public class TokenProvider implements InitializingBean {
       Collection<? extends GrantedAuthority> authorities =
          Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
             .map(SimpleGrantedAuthority::new)
-            .collect(Collectors.toList());
+            .toList();
 
       User principal = new User(claims.getSubject(), "", authorities);
 
