@@ -2,44 +2,45 @@ package me.silvernine.tutorial.service;
 
 import me.silvernine.tutorial.entity.User;
 import me.silvernine.tutorial.repository.UserRepository;
+import org.springframework.security.authentication.DisabledException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component("userDetailsService")
+@Service("userDetailsService")
 public class CustomUserDetailsService implements UserDetailsService {
-   private final UserRepository userRepository;
+    private final UserRepository userRepository;
 
-   public CustomUserDetailsService(UserRepository userRepository) {
-      this.userRepository = userRepository;
-   }
+    public CustomUserDetailsService(UserRepository userRepository) {
+        this.userRepository = userRepository;
+    }
 
-   @Override
-   @Transactional
-   public UserDetails loadUserByUsername(final String username) {
-      return userRepository.findOneWithAuthoritiesByUsername(username)
-         .map(user -> createUser(username, user))
-         .orElseThrow(() -> new UsernameNotFoundException(username + " -> 데이터베이스에서 찾을 수 없습니다."));
-   }
+    @Override
+    @Transactional
+    public UserDetails loadUserByUsername(final String username) {
+        return userRepository.findOneWithAuthoritiesByUsername(username)
+                .map(user -> createUser(username, user))
+                .orElseThrow(() -> new UsernameNotFoundException(username + " -> 데이터베이스에서 찾을 수 없습니다."));
+    }
 
-   private org.springframework.security.core.userdetails.User createUser(String username, User user) {
-      if (!user.isActivated()) {
-         throw new RuntimeException(username + " -> 활성화되어 있지 않습니다.");
-      }
+    private org.springframework.security.core.userdetails.User createUser(String username, User user) {
+        if (!user.isActivated()) {
+            throw new DisabledException(username + " -> 활성화되어 있지 않습니다.");
+        }
 
-      List<GrantedAuthority> grantedAuthorities = user.getAuthorities().stream()
-              .map(authority -> new SimpleGrantedAuthority(authority.getAuthorityName()))
-              .collect(Collectors.toList());
+        List<GrantedAuthority> grantedAuthorities = user.getAuthorities().stream()
+                .map(authority -> (GrantedAuthority) new SimpleGrantedAuthority(authority.getAuthorityName()))
+                .toList();
 
-      return new org.springframework.security.core.userdetails.User(user.getUsername(),
-              user.getPassword(),
-              grantedAuthorities);
-   }
+        return new org.springframework.security.core.userdetails.User(
+                user.getUsername(),
+                user.getPassword(),
+                grantedAuthorities);
+    }
 }
